# integrity

./: .envrc  .gitignore  .pre-commit-config.yaml  .trivyignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  ci-check.yml  code-scan.yaml  docs.yml  release-native-ffi.yml  sync-contexts.yml
examples/: revocable_vc.rs  yubikey_example.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
ffi/src/ffi/: blob_store.rs  dsse.rs  lineage_manifest.rs  lineage_statements.rs  mod.rs  model_signing.rs  signer.rs  tests.rs  util.rs  vc.rs  version.rs
fixtures/: README.md  additional-context.context.json  additional-context.jsonld  additional-context.nquads  blank-nodes.canon.nquads  blank-nodes.jsonld  blank-nodes.nquads  foobar.jsonld  foobar.nquads  simple-compute.canon.nquads  simple-compute.jsonld  simple-registration.canon.nquads  simple-registration.jsonld
include/: integrity_ffi.h
integrity-blob/: Cargo.toml
integrity-blob/src/: lib.rs
integrity-blob/src/blob_store/: azure_blob.rs  gcs.rs  mod.rs  s3.rs
integrity-cid/: Cargo.toml
integrity-cid/src/: blake3.rs  collection.rs  iroh.rs  jcs.rs  lib.rs
integrity-dsse/: Cargo.toml
integrity-dsse/src/: lib.rs
integrity-intoto-attestation/: Cargo.toml
integrity-intoto-attestation/src/: lib.rs  predicate.rs  statement.rs
integrity-jsonld/: Cargo.toml  README.md  build.rs
integrity-jsonld/src/: lib.rs  loader.rs  nquads.rs  to_nquads.rs
integrity-jsonld/static_contexts/: Makefile
integrity-jsonld/static_contexts/https/eqtylab.io/contexts/: component-attestation.jsonld  identity-attestation.jsonld
integrity-lineage-models/: Cargo.toml
integrity-lineage-models/src/: lib.rs  nquads.rs
integrity-lineage-models/src/cid/: blake3.rs  jcs.rs  mod.rs
integrity-lineage-models/src/models/: graph.rs  mod.rs
integrity-lineage-models/src/models/manifest/: mod.rs
integrity-lineage-models/src/models/statements/: association_statement.rs  computation_statement.rs  data_statement.rs  dsse_statement.rs  entity_statement.rs  governance_statement.rs  metadata_statement.rs  mod.rs  sigstore_bundle_statement.rs  storage_statement.rs  vc_statement.rs
integrity-lineage-models/src/models/statements/did_statement/: eqty_vcomp_amdsev_v1.rs  eqty_vcomp_azure_v1.rs  eqty_vcomp_custom_v1.rs  eqty_vcomp_docker_v1.rs  eqty_vcomp_inteltdx_v0.rs  mod.rs  regular.rs
integrity-model-signing/: Cargo.toml
integrity-model-signing/src/: lib.rs
integrity-signer/: Cargo.toml
integrity-signer/src/: lib.rs
integrity-signer/src/signer/: akv_signer.rs  mod.rs  notary_inproc.rs  p256_jwk.rs  p256_signer.rs  vcomp_notary.rs  vcomp_notary_mod.rs  yubikey_signer.rs
integrity-sigstore/: Cargo.toml
integrity-vc/: Cargo.toml
integrity-vc/src/: lib.rs  signer_adapter.rs
scripts/: sync-credential-contexts.sh
src/: alt_signer.rs  dsse.rs  iroh.rs  lib.rs  model_signing.rs  nquads.rs  signer.rs  sigstore_bundle.rs  vc.rs
src/blob_store/: azure_blob.rs  gcs.rs  in_memory.rs  local_fs.rs  mod.rs  s3.rs
src/cid/: blake3.rs  iroh.rs  jcs.rs  mod.rs
src/ffi/: blob_store.rs  dsse.rs  error.rs  intoto.rs  lineage_statements.rs  mod.rs  runtime.rs  signer.rs  tests.rs  util.rs  version.rs
src/intoto_attestation/: mod.rs  models.rs  predicate.rs  statement.rs  subject.rs
src/json_ld/: loader.rs  mod.rs  to_nquads.rs
src/lineage/: mod.rs
src/lineage/graph_indexer/: mod.rs  row_types.rs  sql_indexer.rs  sql_lite.rs
src/lineage/indexer/: mod.rs  sql_indexer.rs  sql_lite.rs  statement_filter.rs
src/lineage/models/: dsse.rs  graph.rs  mod.rs
src/lineage/models/manifest/: anchor.rs  manifest_v4.rs  mod.rs
src/lineage/models/statements/: association_statement.rs  common.rs  computation_statement.rs  data_statement.rs  dsse_statement.rs  entity_statement.rs  governance_statement.rs  metadata_statement.rs  mod.rs  sigstore_bundle_statement.rs  storage_statement.rs  vc_statement.rs
src/lineage/models/statements/did_statement/: eqty_vcomp_amdsev_v1.rs  eqty_vcomp_azure_v1.rs  eqty_vcomp_custom_v1.rs  eqty_vcomp_docker_v1.rs  eqty_vcomp_inteltdx_v0.rs  mod.rs  regular.rs
src/signer/: akv_signer.rs  auth_service_signer.rs  ed25519_signer.rs  p256_signer.rs  secp256k1_signer.rs  vcomp_notary.rs  yubi_key.rs
static_contexts/: Makefile
