[workspace]
members = [
  ".",
  "integrity-blob",
  "integrity-cid",
  "integrity-dsse",
  "ffi",
  "integrity-intoto-attestation",
  "integrity-jsonld",
  "integrity-lineage-models",
  "integrity-model-signing",
  "integrity-sigstore",
  "integrity-signer",
  "integrity-vc",
]
resolver = "2"

[package]
name = "integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[example]]
name = "yubikey-example"
path = "examples/yubikey_example.rs"
required-features = ["signer-yubikey", "vc"]

[features]
default = [
  "cid",
  "jsonld",
  "vc",
  "sigstore",
  "dsse",
  "intoto-attestation",
  "lineage",
  "model-signing",
  "blob-local",
  "blob-memory",
  "signer-ed25519",
  "signer-p256",
  "signer-secp256k1",
]
all = [
  "cid",
  "jsonld",
  "vc",
  "sigstore",
  "dsse",
  "intoto-attestation",
  "lineage",
  "model-signing",
  "blob-all",
  "signer-all",
]
tokio-tests = ["jsonld", "integrity-jsonld/tokio-tests"]

blob = ["dep:integrity-blob"]
cid = ["dep:integrity-cid"]
jsonld = ["dep:integrity-jsonld"]
signer = ["dep:integrity-signer"]
sigstore = ["dep:integrity-sigstore"]
vc = ["dep:integrity-vc"]
dsse = ["dep:integrity-dsse"]
intoto-attestation = ["dep:integrity-intoto-attestation"]
lineage = ["dep:integrity-lineage-models"]
model-signing = ["dep:integrity-model-signing"]

blob-local = ["blob", "integrity-blob/blob-local"]
blob-memory = ["blob", "integrity-blob/blob-memory"]
blob-s3 = ["blob", "integrity-blob/blob-s3"]
blob-gcs = ["blob", "integrity-blob/blob-gcs"]
blob-azure = ["blob", "integrity-blob/blob-azure"]
blob-all = ["blob", "integrity-blob/blob-all"]

signer-ed25519 = ["signer", "integrity-signer/signer-ed25519", "integrity-vc?/signer-ed25519"]
signer-p256 = ["signer", "integrity-signer/signer-p256", "integrity-vc?/signer-p256"]
signer-secp256k1 = ["signer", "integrity-signer/signer-secp256k1", "integrity-vc?/signer-secp256k1"]
signer-auth-service = ["signer", "integrity-signer/signer-auth-service", "integrity-vc?/signer-auth-service"]
signer-vcomp-notary = ["signer", "integrity-signer/signer-vcomp-notary", "integrity-vc?/signer-vcomp-notary"]
signer-akv = ["signer", "integrity-signer/signer-akv", "integrity-vc?/signer-akv"]
signer-yubihsm = ["signer", "integrity-signer/signer-yubihsm", "integrity-vc?/signer-yubihsm"]
signer-yubikey = ["signer", "integrity-signer/signer-yubikey", "integrity-vc?/signer-yubikey"]
signer-slh-dsa = ["signer", "integrity-signer/signer-slh-dsa", "integrity-vc?/signer-slh-dsa"]
signer-all = ["signer", "integrity-signer/signer-all", "integrity-vc?/signer-all"]

[dependencies]
integrity-blob = { path = "integrity-blob", default-features = false, optional = true }
integrity-cid = { path = "integrity-cid", default-features = false, optional = true }
integrity-signer = { path = "integrity-signer", default-features = false, optional = true }
integrity-jsonld = { path = "integrity-jsonld", default-features = false, optional = true }
integrity-sigstore = { path = "integrity-sigstore", default-features = false, optional = true }
integrity-vc = { path = "integrity-vc", default-features = false, optional = true }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
base64 = "0.21"
clap = { version = "4.5", features = ["derive"] }
openssl = "0.10.79"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
integrity-intoto-attestation = { path = "integrity-intoto-attestation", default-features = false, optional = true }
integrity-dsse = { path = "integrity-dsse", default-features = false, optional = true }
integrity-lineage-models = { path = "integrity-lineage-models", default-features = false, optional = true }
integrity-model-signing = { path = "integrity-model-signing", default-features = false, optional = true }
