[package]
name = "integrity-ffi"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = [
  "blob-local",
  "blob-memory",
  "signer-ed25519",
  "signer-p256",
  "signer-secp256k1",
]
ffi = []

blob-local = ["integrity-blob/blob-local"]
blob-memory = ["integrity-blob/blob-memory"]
blob-s3 = ["integrity-blob/blob-s3"]
blob-gcs = ["integrity-blob/blob-gcs"]
blob-azure = ["integrity-blob/blob-azure"]
blob-all = ["integrity-blob/blob-all"]

signer-ed25519 = ["integrity-signer/signer-ed25519"]
signer-p256 = ["integrity-signer/signer-p256"]
signer-secp256k1 = ["integrity-signer/signer-secp256k1"]
signer-auth-service = ["integrity-signer/signer-auth-service"]
signer-vcomp-notary = ["integrity-signer/signer-vcomp-notary"]
signer-akv = ["integrity-signer/signer-akv"]
signer-yubihsm = ["integrity-signer/signer-yubihsm"]
signer-slh-dsa = ["integrity-signer/signer-slh-dsa"]
signer-all = ["integrity-signer/signer-all"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
integrity = { path = "..", default-features = false, features = ["cid", "dsse", "intoto-attestation", "lineage", "model-signing", "sigstore", "vc"] }
integrity-blob = { path = "../integrity-blob", default-features = false }
integrity-signer = { path = "../integrity-signer", default-features = false }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssi = { version = "0.16.0", features = ["w3c", "ed25519", "secp256r1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
uuid = { version = "1.4", features = ["v4"] }
