[package]
name = "integrity-cid"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cid = { version = "0.11", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
blake3 = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blake3 = { version = "1.5", features = ["mmap", "rayon"] }
bytes = "1.5"
ignore = "0.4"
integrity-blob = { path = "../integrity-blob", default-features = false }
iroh-base = { version = "0.14.0", default-features = false, features = ["hash"] }
iroh-bytes = { version = "0.14.0", default-features = false }
iroh-blake3 = "1.4.5"
log = "0.4"
postcard = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
