[package]
name = "integrity-intoto-attestation"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.21"
cid = { version = "0.10", default-features = false, features = ["std"] }
did-key = "0.2"
hex = "0.4.3"
integrity-signer = { path = "../integrity-signer", default-features = false }
p256 = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
