[package]
name = "integrity-jsonld"
version = "0.0.1"
edition = "2021"

[features]
default = []
tokio-tests = ["dep:tokio"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cid = { version = "0.10", default-features = false, features = ["std"] }
futures = "0.3"
iref = "2.0"
json-ld = "0.12"
locspan = "0.7"
log = "0.4"
nquads-syntax = "0.10"
once_cell = "1"
rdf-types = "0.12"
serde_json = "1.0"
ssi-json-ld = "0.2"

blake3 = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iroh-blake3 = "1.4.5"
