[package]
name = "integrity-lineage-models"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.21"
cid = { version = "0.10", default-features = false, features = ["std"] }
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3"
hex = "0.4.3"
integrity-blob = { path = "../integrity-blob", default-features = false }
integrity-cid = { path = "../integrity-cid", default-features = false }
integrity-jsonld = { path = "../integrity-jsonld", default-features = false }
integrity-sigstore = { path = "../integrity-sigstore", default-features = false }
locspan = "0.8"
log = "0.4"
nquads-syntax = "0.19"
rdf-types = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1.0"
ssi = { version = "0.16", features = ["w3c", "ed25519", "secp256k1", "secp256r1"] }
utoipa = { version = "3", features = ["axum_extras", "openapi_extensions"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
blake3 = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iroh-blake3 = "1.4.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
