[package]
name = "integrity-signer"
version = "0.0.1"
edition = "2021"

[features]
default = []
signer-ed25519 = []
signer-p256 = []
signer-secp256k1 = []
signer-auth-service = ["dep:reqwest", "dep:sha2"]
signer-vcomp-notary = [
  "dep:reqwest",
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
  "dep:tokio",
]
signer-akv = [
  "dep:azure_core",
  "dep:azure_identity",
  "dep:azure_security_keyvault",
  "dep:reqwest",
  "dep:sha2",
]
signer-yubihsm = ["dep:yubihsm"]
signer-slh-dsa = ["dep:slh-dsa"]
signer-all = [
  "signer-ed25519",
  "signer-p256",
  "signer-secp256k1",
  "signer-auth-service",
  "signer-vcomp-notary",
  "signer-akv",
  "signer-yubihsm",
  "signer-slh-dsa",
]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
base64 = "0.21"
did-key = "0.2"
hex = "0.4.3"
log = "0.4"
p256 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

azure_core = { version = "0.21", optional = true }
azure_identity = { version = "0.21", optional = true }
azure_security_keyvault = { version = "0.21", optional = true }
http-body-util = { version = "0.1.1", optional = true }
hyper = { version = "1.3.1", features = ["full"], optional = true }
hyper-util = { version = "0.1.3", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
sha2 = { version = "0.10.8", optional = true }
slh-dsa = { version = "0.0.3", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"], optional = true }
yubihsm = { version = "0.42.1", features = ["usb", "http", "secp256k1", "ed25519-dalek", "digest"], optional = true }
